--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
+	"id": "note-taking-plugin",
+	"name": "MaNa's note taking plugin",
+	"version": "2.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "A simple obsidian plugin to speed up the note taking process for fast paced science-oriented courses.",
+	"author": "Andrea Malvezzi",
+	"authorUrl": "",
+	"fundingUrl": "",
 	"isDesktopOnly": false
 }
